...
	var selectedRow: IndexPath?
	var editingNow: Bool = false

	override func viewDidLoad() {
		super.viewDidLoad()
        
		tableView.accessibilityIdentifier = "mainTable"
		
		timer = Timer.scheduledTimer(withTimeInterval: 1.0, repeats: true, block: { _ in
			for index in 0..<self.brothers.count {
				self.brothers[index].time += 1
			}
			if !self.editingNow {
...
									  preferredStyle: .alert)

		alert.addTextField { (textField) in
			textField.placeholder = "Mike Hunt"
			textField.autocapitalizationType = .words
			textField.returnKeyType = .done
			textField.accessibilityIdentifier = "nameInput"
		}

		alert.addAction(UIAlertAction(title: "OK", style: .default, handler: { [weak alert] (_) in
			let textField = alert?.textFields![0]
			
			if self.selectedRow != nil {
...
