...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Tf6-Kv-9Mr" id="KMY-nI-xmN"/>
                            <outlet property="delegate" destination="Tf6-Kv-9Mr" id="qKA-Uv-BW8"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Rush Captain" id="NkE-Qe-h9z">
                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="7mH-ec-ceX">
                            <connections>
                                <action selector="setTimeWithSender:" destination="Tf6-Kv-9Mr" id="CbM-cD-4EX"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="b8m-vx-FrK">
...
